<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_tela"
    tools:context=".fragments.HomeFragment">


    <ImageView
        android:id="@+id/imageViewFundoBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:scaleType="fitXY"
        android:src="@drawable/fundo_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogout" />

    <ImageView
        android:id="@+id/imgViewFundoGerenciar"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/imageViewFundoBox"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFundoBox"
        app:layout_constraintStart_toStartOf="@+id/imageViewFundoBox"
        app:layout_constraintTop_toTopOf="@+id/imageViewFundoBox"
        app:srcCompat="@drawable/fundo_dados"
        tools:srcCompat="@drawable/fundo_dados" />

    <ImageButton
        android:id="@+id/imgBtnLogout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/img_logout"
        android:rotationY="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_logout_button"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imgBtnLogout"
        app:layout_constraintStart_toStartOf="@+id/imgBtnLogout"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnLogout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/callsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFundoBox"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFundoBox"
        app:layout_constraintStart_toStartOf="@+id/imageViewFundoBox"
        app:layout_constraintTop_toBottomOf="@+id/imgViewFundoGerenciar" />

    <TextView
        android:id="@+id/textViewWaiterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_welcome"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewFundoGerenciar"
        app:layout_constraintEnd_toEndOf="@+id/imgViewFundoGerenciar"
        app:layout_constraintStart_toStartOf="@+id/imgViewFundoGerenciar"
        app:layout_constraintTop_toTopOf="@+id/imgViewFundoGerenciar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_linked_sections"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewFundoGerenciar"
        app:layout_constraintEnd_toEndOf="@+id/imgViewFundoGerenciar"
        app:layout_constraintStart_toStartOf="@+id/imgViewFundoGerenciar"
        app:layout_constraintTop_toBottomOf="@+id/textViewWaiterName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewWaiterSections"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:breakStrategy="high_quality"
        android:text="Your sections"
        android:textAlignment="center"
        android:textSize="13sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewFundoGerenciar"
        app:layout_constraintEnd_toEndOf="@+id/imgViewFundoGerenciar"
        app:layout_constraintStart_toStartOf="@+id/imgViewFundoGerenciar"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescricao"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>