<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_tela"
    tools:context=".fragments.LoginFragment" >

    <ImageView
        android:id="@+id/imageViewFundoBox"
        android:layout_width="350dp"
        android:layout_height="650dp"
        android:scaleType="fitXY"
        android:src="@drawable/fundo_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageViewFundoRegistrar"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/fundo_gerenciar"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFundoBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewFundoBox"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFundoBox"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFundoBox"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/imageViewFundoBox"
        app:layout_constraintTop_toTopOf="@+id/imageViewFundoBox"
        app:layout_constraintVertical_bias="0.262" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:background="@drawable/email_input"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFundoBox"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFundoBox"
        app:layout_constraintStart_toStartOf="@+id/imageViewFundoBox"
        app:layout_constraintTop_toTopOf="@+id/imageViewFundoBox"
        app:layout_constraintVertical_bias="0.566">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInputEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="55dp"
            android:hint="@string/txt_email_field"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/text_color"
            android:textColorLink="@color/black"
            android:textSize="20sp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/password_input"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFundoBox"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/imageViewFundoBox"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtInputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="55dp"
            android:hint="@string/txt_password_field"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/text_color"
            android:textSize="20sp">

        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/imageButtonLogin"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/fundo_botao_login"
        android:contentDescription="imagem do botão"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFundoBox"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFundoBox"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/imageViewFundoBox" />

    <TextView
        android:id="@+id/textEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/txt_login_button"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFundoRegistrar"
        app:layout_constraintEnd_toEndOf="@+id/imageViewFundoRegistrar"
        app:layout_constraintStart_toStartOf="@+id/imageViewFundoRegistrar"
        app:layout_constraintTop_toTopOf="@+id/imageViewFundoRegistrar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login_button"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonLogin"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonLogin"
        app:layout_constraintStart_toStartOf="@+id/imageButtonLogin"
        app:layout_constraintTop_toTopOf="@+id/imageButtonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>